--- a/serverless.yml
+++ b/serverless.yml
@@ -5,36 +5,31 @@ service: drone-co-message-broker
 provider:
   name: aws
   runtime: nodejs12.x
+  role: MsgBrokerServiceRole
 # you can overwrite defaults here
 # region: us-east-1
 
 plugins:
   - serverless-offline
-
+  - serverless-dotenv-plugin
 
 package: 
   include: # Specify the directories and files which should be included in the deployment package
   exclude: 
     - .git/**
-    # - node_modules/** # so that aws-sdk and all its dependencies are ignored
+    - node_modules/aws-sdk # so that aws-sdk and all its dependencies are ignored
 
 functions:
-  createMsgContent:
-    handler: handlers/createMsgContent.main
+  createMsgMapping:
+    handler: handlers/createMsgMapping.main
     events:
       - http:
           path: messageContent
           method: post
           cors: true
 
-# you can add CloudFormation resource templates here
-#resources:
-#  Resources:
-#    NewResource:
-#      Type: AWS::S3::Bucket
-#      Properties:
-#        BucketName: my-new-bucket
-#  Outputs:
-#     NewOutput:
-#       Description: "Description for the output"
-#       Value: "Some output value"
+# this is where you include raw cloud formation
+resources:
+  - ${file(./cloudFormation/iamRole.yml)}
+  - ${file(./cloudFormation/tables.yml)}
+
