--- a/cloudFormation/iamRole.yml
+++ b/cloudFormation/iamRole.yml
@@ -58,3 +58,17 @@ Resources:
                       - Ref: 'AWS::Region'
                       - Ref: 'AWS::AccountId'
                       - 'table/MessageContent' 
+              - Effect: Allow
+                Action:
+                  - sqs:ReceiveMessage
+                  - sqs:DeleteMessage
+                  - sqs:GetQueueAttributes
+                  - sqs:SendMessage
+                Resource:
+                  - 'Fn::Join':
+                    - ':'
+                    -
+                      - 'arn:aws:sqs'
+                      - Ref: 'AWS::Region'
+                      - Ref: 'AWS::AccountId'
+                      - 'drone-co-queue'
