--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "^6.8.0",
     "eslint-plugin-mocha": "^6.3.0",
     "mocha": "^7.1.2",
+    "nodemon": "^2.0.3",
     "object-sizeof": "^1.6.0",
     "serverless-dotenv-plugin": "^2.4.2",
     "serverless-offline": "^6.1.4"
