--- a/cloudFormation/tables.yml
+++ b/cloudFormation/tables.yml
@@ -4,7 +4,7 @@ Resources:
     Properties:
       BillingMode: PAY_PER_REQUEST
       # if commented out tableName will be generated
-      # TableName: MessageContent 
+      TableName: MessageContent-${self:provider.stage}
       AttributeDefinitions:
         - AttributeName: contentId
           AttributeType: S
@@ -16,7 +16,7 @@ Resources:
     Type: AWS::DynamoDB::Table
     Properties:
       BillingMode: PAY_PER_REQUEST
-      # TableName: MessageMapping
+      TableName: MessageMapping-${self:provider.stage}
       AttributeDefinitions:
         - AttributeName: recipientId
           AttributeType: S
